--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.wrapper{
+    display: flex;
+    flex-direction: row;
+    padding: 17px;
+    background-color: rgba(245, 241, 241, 0.938);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.total{
+    margin-left: 15px;
+    margin-right: 6px;
+    background-color: rgb(94, 206, 221);
+    border-radius: 10px;
+    width: 40px;
+    color: white;
+    font-size: small;
+    font-weight: 600;
+    text-align: center;
 }
