--- a/src/components/RegisterRight/style.css
+++ b/src/components/RegisterRight/style.css
@@ -65,6 +65,7 @@
 label{
     margin-top: 1em;
     margin-bottom: 4px;
+    font-size: 12px;
 }
 input{
     height: 45px;
@@ -73,6 +74,8 @@ input{
     border: 1px solid #8692A6;
     box-sizing: border-box;
     border-radius: 6px;
+    font-size: 12px;
+
 }
 .check{
     display: flex;
